--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <form>
         <label for="pessoas">Nomes das Pessoas:</label><br>
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
-        <button type="button" onclick="sortear()">Sortear</button>
+         <button onclick="sortear()">Sortear</button>
+  <p id="resultado"></p>
+  <div id="rojao"></div>
       </form>
       <div id="resultado"></div>
     </main>
