--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
         <button onclick="sortear()">Sortear</button>
         <p id="resultado"></p>
-        <div id="rojao"></div>
+        <img src="bexigas.gif" id="circulo">
       </form>
       <div id="resultado"></div>
        
