--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     </header>
     <main>
       <form>
-         <label for="pessoas">Nomes das Pessoas:</label><br>
+        <label for="pessoas">Nomes das Pessoas:</label><br>
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
-        <button onclick="sortear()">Sortear</button>
-        <p id="resultado"></p>
-    
+        <button type="button" onclick="sortear()">Sortear</button>
       </form>
+      <div id="resultado"></div>
     </main>
     <footer>
       <p>Desenvolvido por: Sandro</p>
