--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Sorteio de Pessoas</title>
+      <script src="https://cdn.jsdelivr.net/npm/confetti-js/dist/confetti.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
