--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <footer>
       <p>Desenvolvido por: Sandro</p>
     </footer>
+    <script src="confetti.js"></script>
   <script src="script.js"></script>
    
   </body>
