--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <form>
         <label for="pessoas">Nomes das Pessoas:</label><br>
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
-        <button type="button" onclick="sortear()">Sortear</button>
+        <button type="button" onclick="sortear(); startConfetti();">Sortear</button>
+
         
       </form>
        <div id="resultado"></div>
