--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <body>
     <header>
       <h1>Sorteio de Pessoas</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Sorteio</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <form>
