--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <label for="pessoas">Nomes das Pessoas:</label><br>
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
         <button type="button" onclick="sortear(); startConfetti();">Sortear</button>
+        <a href="sobre.html" target="_blank"><button type="button">Sobre</button></a>
 
         
       </form>
