--- a/sobre.html
+++ b/sobre.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Sorteio de Pessoas</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <h1>Sorteio de Pessoas</h1>
+    
+    </header>
+    <p style="text-align: justify;">
+    <br>Este código é uma página HTML simples que permite ao usuário inserir nomes de pessoas em um formulário de texto e, em seguida, clicar em um botão "Sortear" para selecionar aleatoriamente uma dessas pessoas.
+
+<br>A página inclui uma seção de cabeçalho com o título "Sorteio de Pessoas", um formulário com um campo de entrada de texto para nomes de pessoas e um botão de "Sortear", e uma seção de resultado onde o nome da pessoa selecionada aleatoriamente será exibido.
+
+<br>O código também inclui um link para um arquivo de estilo CSS externo chamado "style.css" e um arquivo JavaScript externo chamado "script.js", que contém a função "sortear()" responsável por selecionar aleatoriamente uma das pessoas inseridas no formulário e exibi-la na seção de resultado da página.
+
+<br>Por fim, há uma seção de rodapé com o nome do desenvolvedor "Sandro".</p>
+
+       <div id="resultado"></div>
+     
+    </main>
+    <footer>
+      <p>Desenvolvido por: Sandro</p>
+    </footer>
+   
+   
+  </body>
+</html>
