--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <textarea id="pessoas" name="pessoas" rows="5" cols="50"></textarea><br>
         <button type="button" onclick="sortear(); startConfetti();">Sortear</button>
         <a href="sobre.html" target="_blank"><button type="button">Sobre</button></a>
+        <a href="https://www.youtube.com/watch?v=NClT0zyRBRE" target="_blank"><button type="button">Vídeo</button></a>
 
         
       </form>
